fix norecord alignment

--- a/src/components/LandingPage/Landing.css
+++ b/src/components/LandingPage/Landing.css
@@ -62,6 +62,17 @@ button:disabled{
     align-items: center;
     width: 100vw;
 }
+.loading-text{
+    font-size: 5rem;
+    font-weight: 700;
+}
+
+.loading-container{
+    display:flex; 
+    justify-content:center;
+    align-items:center;
+    height: 100vh;
+}
 
 @media (max-width: 975px) {
     .deleteSelectedButton{
