--- a/src/components/TableRow/Table.css
+++ b/src/components/TableRow/Table.css
@@ -2,6 +2,7 @@
 
 .i{
     text-align: center;
+    width: 4rem;
 }
 
 .selectedRow{
